samples/_failures_safe/1761690567_25b30b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe718d78.c: In function ‘main’:
./samples/SAFE/__tmp_fe718d78.c:142:42: error: expected ‘)’ at end of input
  142 |         add_edge(&g, i, src, dest, weight
      |                 ~                        ^
      |                                          )
./samples/SAFE/__tmp_fe718d78.c:142:9: error: expected declaration or statement at end of input
  142 |         add_edge(&g, i, src, dest, weight
      |         ^~~~~~~~
./samples/SAFE/__tmp_fe718d78.c:142:9: error: expected declaration or statement at end of input
